--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,25 @@
 .read-the-docs {
   color: #888;
 }
+
+.selectedBox{
+  color:#1a1a1a;
+  background-color:#f7de24;
+}
+
+.resetButton{
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size:1em;
+  margin-top:3em;
+  margin:1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #5ed864;
+  color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  width: 400px; 
+  height: 50px;
+}
