--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ button {
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 2em;
-  margin-top:2em;
+  margin-top:1em;
   margin:0.1em;
   font-weight: 500;
   font-family: inherit;
@@ -49,7 +49,12 @@ button {
   transition: border-color 0.25s;
   width: 100px; 
   height: 100px;
- 
+  text-align: center;
+  
+  vertical-align: middle;
+  
+  align-items: center; 
+  justify-content: center;
 }
 button:hover {
   border-color: #ffffff;
