--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,40 @@
 .read-the-docs {
   color: #888;
 }
+
+.gameOverScreen {
+  background-color: black;
+  color:darkslategray;
+  width: 500px;
+  height: 300px;
+  align-content: center;
+}
+
+.TTbutton {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 2em;
+  margin-top:1em;
+  margin:0.1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  width: 100px; 
+  height: 100px;
+  text-align: center;
+  
+  vertical-align: middle;
+  
+  align-items: center; 
+  justify-content: center;
+}
+.TTbutton:hover {
+  border-color: #ffffff;
+}
+.TTbutton:focus,
+.TTbutton:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
