--- a/src/App.css
+++ b/src/App.css
@@ -43,11 +43,19 @@
 }
 
 .gameOverScreen {
-  background-color: black;
+  /* background-color: black; */
   color:darkslategray;
-  width: 500px;
+  /* width: 500px;
   height: 300px;
-  align-content: center;
+  align-content: center; */
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 50;
+
 }
 
 .TTbutton {
